--- a/formStep1.1/style.css
+++ b/formStep1.1/style.css
@@ -8,7 +8,7 @@
 }
 body {
   background-color: white;
-  height: 130vh;
+  /* height: 130vh; */
   width: 100%;
 }
 
@@ -37,181 +37,92 @@ nav {
     text-decoration: underline;
   }
 
-  .line{
-    width: 100%;
+  
+  hr {
     border: none;
-  height: 1px;
-  background-color: #e6e6e6;   
-  margin: 10px 0;             
-  opacity: 0.8;  
+    height: 1px;
+    background-color: #e6e6e6;   
+    margin: 10px 0;             
+    opacity: 0.8;              
   }
+  
+
+  
   #hero-main{
-    height: 190vh;
-    width: 100%;
+    height: 100vh;
+    width: 100% ;
     /* border: 2px solid red; */
-    display:flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #hero{
+    height: 80%;
+    width: 40%;
+    /* border: 2px solid blue; */
+    display: flex;
     flex-direction: column;
     align-items: center;
-    
-    
   }
+
   .hero-elements{
-   /* border: 2px solid yellow; */
-   width: 80%;
+    height: 10vh;
+    width: 20vw;
+    /* border: 2px solid yellow; */
+  }
+  #setup{
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2vh;
   }
 
   #nstep{
-    margin-top: 50px;
-    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    font-size: 13px;
   }
 
-  #opt{
-    height:5vh ;
+  
+  #finish {
+    height: 15vh;
+    width: 25vw;
     font-size: 28px;
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-  }
-
-  #plans{
-    height: 120vh;
-    margin-top: 25px;
-    display: flex;
-    justify-content: space-around;
-
-  }
- 
-
-  .plan{
-    height: 100vh;
-    width: 22%;
-    border: 0.3px solid gray;
-    margin-top: 35px;
-    border-radius: 12px;
-  }
-
-  .plan1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .plan-feature{
-    width: 90%;
-    /* border: 2px solid blueviolet; */
-    margin-top: 10px;
-    padding-left: 20px;
-  }
-
-  .feat1{
-    height: 13vh;
-    margin-top: 6px;
-    margin-bottom: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 12px;
-    padding-left: 10px;
-    /* border: 2px solid brown; */
-    /* background-color: cadetblue; */
-    color: white;
-
-    background: #ad5389;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    
-    
-
-}
-
-hr {
-  border: none;
-  height: 1px;
-  background-color: #e6e6e6;   
-  margin: 5px 0;             
-  opacity: 0.8;   
-  width: 80%;           
-}
-.mob{
-      font-size: 17px;
-      font-weight: 600;
-  }
-
-  .quality{
-    font-size: 12px;
-    font-weight: 700;
-  }
-  
-  .perks{
-    color: gray;
-    font-size: 13px;
     font-weight: 600;
-  }
-
-  .perks-ans{
-    font-size: 14px;
-    font-weight: 500;
-  }
- 
-  
-
-  .plan2{
-    height: 105.8vh;
-    margin-top: 2px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: ; 
-  }
-
-  #pop{
-    height: 5vh;
-    width: 100%;
-    /* border: 2px solid black; */
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
+    color: #333333;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 13px;
-    font-weight: 600;
-    background-color: #6D3BE3;
-    color:white;
-    position: relative;
-    bottom: 2px;
+    text-align: center;
   }
 
-  .plan3{
+  #desc{
+    height: 10vh;
+    width: 25vw;
+    font-size: 16px;
+    font-weight: 400;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-  }
-  .plan4{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-
-  .terms{
-    height: 5vh;
-    width: 80%;
-    font-size: 12px;
+    text-align: center;
     margin-top: 10px;
-    color: rgb(106, 104, 104);
+
   }
 
   #next{
     height: 10vh;
-    width: 30%;
+    width: 25vw;
     display: flex;
     justify-content:center;
     align-items: center;
     background-color: #E50914;
     border-radius:4px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 18px;
   }
   #next:hover{
    
@@ -222,6 +133,7 @@ hr {
     font-size: 1.5rem;
     font-weight: 500;
   }
+
 
 
 
