--- a/formStep1.2/style.css
+++ b/formStep1.2/style.css
@@ -37,34 +37,34 @@ nav {
     text-decoration: underline;
   }
 
-  .line{
-    width: 100%;
+  
+  hr {
+    border: none;
+    height: 1px;
+    background-color: #e6e6e6;   
+    margin: 10px 0;             
+    opacity: 0.8;              
   }
-  hr{
-
-    height: 0.3px;
-    width: 80%;
-    background-color: gray;
-    margin-top: 10px;
-  }
+  
 
   
   #hero-main{
-    height: 100vh;
+    height: 81vh;
     width: 100% ;
     /* border: 2px solid red; */
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-top: 40px;
   }
 
   #hero{
-    height: 80%;
-    width: 40%;
+    height: 100%;
+    width: 31%;
     /* border: 2px solid blue; */
-    display: flex;
+    /* margin-top: 10px; */
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
   }
 
   .hero-elements{
@@ -72,51 +72,68 @@ nav {
     width: 20vw;
     /* border: 2px solid yellow; */
   }
-  #setup{
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2vh;
-  }
+ 
 
   #nstep{
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    height: 5vh;
+    align-items: center; */
+    height: 3vh;
     font-size: 13px;
   }
 
   
-  #finish {
-    height: 15vh;
-    width: 25vw;
+  #create {
+    height: 12vh;
+    width: 30vw;
     font-size: 28px;
     font-weight: 600;
     color: #333333;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    margin-top: 10px;
   }
 
   #desc{
-    height: 10vh;
+    height: 8vh;
     width: 25vw;
     font-size: 16px;
-    font-weight: 400;
-    display: flex;
+    font-weight: 450;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center; */
     margin-top: 10px;
 
   }
 
+  #email{
+    height: 8vh;
+    width: 95%;
+    margin-top: 10px;
+    padding-left: 15px;
+  }
+
+  input[type=text]::placeholder{
+    font-size: 14px;
+    color: black;
+  }
+  input[type=password]::placeholder{
+    font-size: 14px;
+    color: black;
+  }
+
+  #password{
+    height: 8vh;
+    width: 95%;
+    margin-top: 10px;
+    padding-left: 15px;
+  }
+
   #next{
     height: 10vh;
-    width: 25vw;
+    width: 100%;
     display: flex;
     justify-content:center;
     align-items: center;
