--- a/formStep1.1/style.css
+++ b/formStep1.1/style.css
@@ -115,14 +115,16 @@ nav {
 
   #next{
     height: 10vh;
-    width: 25vw;
+    width: 65%;
+    /* border: 2px solid yellow; */
     display: flex;
     justify-content:center;
     align-items: center;
     background-color: #E50914;
     border-radius:4px;
     cursor: pointer;
-    margin-top: 18px;
+    text-decoration: none;
+    margin-top: 30px;
   }
   #next:hover{
    
@@ -133,6 +135,7 @@ nav {
     font-size: 1.5rem;
     font-weight: 500;
   }
+  
 
 
 
