--- a/formStep3.1/style.css
+++ b/formStep3.1/style.css
@@ -8,7 +8,7 @@
 }
 body {
   background-color: white;
-  /* height: 130vh; */
+  height: 130vh;
   width: 100%;
 }
 
@@ -26,6 +26,7 @@ nav {
   }
 
 
+
   .btn{
     color: black;
     font-size: 20px;
@@ -37,111 +38,82 @@ nav {
     text-decoration: underline;
   }
 
-  
-  hr {
+  hr{
     border: none;
-    height: 1px;
-    background-color: #e6e6e6;   
-    margin: 10px 0;             
-    opacity: 0.8;              
+  height: 1px;
+  background-color: #e6e6e6;   
+  margin: 10px 0;             
+  opacity: 0.8;   
+  width: 100%;  
   }
   
-
-  
   #hero-main{
-    height: 81vh;
-    width: 100% ;
+    height: 83vh;
+    width: 100%;
     /* border: 2px solid red; */
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    align-items: center;
   }
 
   #hero{
-    height: 100%;
-    width: 31%;
-    /* border: 2px solid blue; */
-    /* margin-top: 10px; */
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
+        height: 83vh;
+        width: 40%;
+        /* border: 2px solid red; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
   }
-
   .hero-elements{
-    height: 10vh;
-    width: 20vw;
     /* border: 2px solid yellow; */
   }
- 
-
-  #nstep{
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    height: 3vh;
-    font-size: 13px;
-  }
-
-  
-  #create {
-    height: 12vh;
-    width: 30vw;
-    font-size: 28px;
-    font-weight: 600;
-    color: #333333;
+  #plan{
+    
+    width: 65%;
+    /* border: 2px solid yellow; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
+  }
+  #img{
+    /* border: 2px solid yellow; */
+  }
+  #nstep{
+    font-size: 12px; 
     margin-top: 10px;
   }
-
-  #desc{
-    height: 8vh;
-    width: 25vw;
-    font-size: 16px;
-    font-weight: 450;
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center; */
-    margin-top: 10px;
-
+  #opt{
+    font-size: 32px;
+    font-weight: 500;
   }
 
-  #email{
-    height: 8vh;
-    width: 95%;
-    margin-top: 10px;
-    padding-left: 15px;
+  #benefits{
+    width: 65%;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
-
-  input[type=text]::placeholder{
-    font-size: 14px;
-    color: black;
-  }
-  input[type=password]::placeholder{
-    font-size: 14px;
-    color: black;
-  }
-
-  #password{
-    height: 8vh;
-    width: 95%;
-    margin-top: 10px;
-    padding-left: 15px;
+  .features{
+    /* border: 2px solid red; */
+    display: flex;
+    gap: 5px;
+    font-size: 18px;
   }
 
   #next{
     height: 10vh;
-    width: 100%;
+    width: 65%;
+    /* border: 2px solid yellow; */
     display: flex;
     justify-content:center;
     align-items: center;
-    text-align: center;
     background-color: #E50914;
     border-radius:4px;
     cursor: pointer;
-    margin-top: 18px;
     text-decoration: none;
   }
   #next:hover{
@@ -154,9 +126,6 @@ nav {
     font-weight: 500;
   }
 
-
-
-
   .queries {
     height: 55vh;
     width: 100vw;
@@ -164,7 +133,7 @@ nav {
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    margin-top: vh;
+    margin-top: 17vh;
     background-color: #F3F3F3;
     /* border: 2px solid yellow; */
   }
