--- a/formStep4/style.css
+++ b/formStep4/style.css
@@ -1,3 +1,5 @@
+
+
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@100;200;300;400;500;600;700;800;900&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap");
@@ -48,21 +50,21 @@ nav {
   }
   
   #hero-main{
-    height: 83vh;
+    height: 80vh;
     width: 100%;
     /* border: 2px solid red; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
   }
 
   #hero{
-        height: 83vh;
-        width: 40%;
+        height: 80vh;
+        width: 42%;
         /* border: 2px solid red; */
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        /* justify-content: space-around; */
         align-items: center;
   }
   .hero-elements{
@@ -78,16 +80,64 @@ nav {
     align-items: center;
     margin-top: 50px;
   }
-  #img{
-    /* border: 2px solid yellow; */
-  }
+ 
   #nstep{
     font-size: 12px; 
     margin-top: 10px;
   }
   #opt{
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 500;
+    /* border: 2px solid blue; */
+    text-align: center;
+  }
+
+  #change{
+    width: 80%;
+    /* border: 2px solid blue; */
+    font-size: 14px;
+    text-align: center;
+  }
+  #secure{
+    width: 70%;
+    /* border: 2px solid blue; */
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 3px;
+  }
+  #cancel{
+    width: 70%;
+    /* border: 2px solid blue; */
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    /* margin-top: 5px; */
+  }
+
+  #encryption{
+    height: 3vh;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    position: relative;
+    top: 35px;
+    left: 145px;
+  }
+
+  .payment{
+    height: 10vh;
+    width: 80%;
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px;
+    border: 1.5px solid #bfbcbc;
+    border-radius: 4px;
+  }
+  #card{
+    margin-top: 40px;
   }
 
   #benefits{
@@ -104,26 +154,7 @@ nav {
     font-size: 18px;
   }
 
-  #next{
-    height: 10vh;
-    width: 65%;
-    /* border: 2px solid yellow; */
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color: #E50914;
-    border-radius:4px;
-    cursor: pointer;
-  }
-  #next:hover{
-   
-    background-color: #c90811;
-  }
-  .text{
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 500;
-  }
+  
 
   .queries {
     height: 55vh;
@@ -132,7 +163,7 @@ nav {
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    margin-top: 17vh;
+    margin-top: 20vh;
     background-color: #F3F3F3;
     /* border: 2px solid yellow; */
   }
